feat: add unit tests for KnowledgeGraphMutationExecutor